# Deltra-neutral-hedge-bot

./: .env  Cargo.toml  place_order.py  readme.md  set_leverage.py
src/: main.rs
